--- a/main-portfolio/project.html
+++ b/main-portfolio/project.html
@@ -71,7 +71,7 @@
                         <p>This a project I made with the help of Mr Shola</p>
                    </div> 
                 </a>
-                <a href="https://jey223.github.io/forms.html" target="_blank">
+                <a href="https://jey223.github.io/forms" target="_blank">
                     <img src="./images/alien-abduction.png" alt="frontend mentor project">
                     <div class="context">
                         <h3>Alien Abduction Form</h3>
