--- a/main-portfolio/project.html
+++ b/main-portfolio/project.html
@@ -11,9 +11,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Cormorant+SC:wght@500&family=Edu+SA+Beginner:wght@700&family=Playfair+Display:ital,wght@1,600&family=Quicksand:wght@500&family=Source+Serif+Pro&display=swap" rel="stylesheet">
-
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Ibarra+Real+Nova&family=Sanchez&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 
 
